improvement.

Changed the frame queueing routines for both speakers and listeners so they are
more efficient.  Specifically, the sequential search through the send frame
list to find the frame to queue to the input member is replaced with a fetch of
the appropriate frame pointer from either the member control block for speakers
or the conference control block for listeners. These pointers are steup when
the spoken frames are processed in the conference thread loop. 

Changed the frame mixing routines to use SIMD instructions for processing
samples which should be much more efficient than processing the samples
serially.

Fixed some compiler warnings by changing the Makefile to set the asterisk
version in a preprocessor flag and changed the source so that code is generated
for the for the appropriate asterisk version. The asterisk version can by
setting the new source directory variable on the command line: make
ASTERISK_SRC_DIRECTORY or by modifying the variable in the Makefile.

Added a compiler flag, VECTORS, that indicates gcc extensions for vector
operations are to be used for mixing frames. Modify the makefile to enable this
feature. 

Remove video features from conference module because we're only interested in
voice and video degrades voice performance.

Changed the code to use the c language idiom for conditionals testing pointers.

Changed the code to use the asterisk memory allocation routines rather than the
c library routines directly.

Reuse speaker and listener mix buffers. This should be more efficient than
allocating/freeing them every time voice frames are mixed.

Remove unnecessary calls to ast_frdup from queue frame for speaker and queue
frame for speaker routines.

Remove unnecessary calls to ast_frdup from frame mixing routines.

Remove dtmf forwarding as this feature was required for video and video is no
longer supported.

Reuse asterisk frames used for speaker and listener mix buffers.