@@ -38,6 +38,7 @@ conf_frame* mix_single_speaker( struct ast_conference* conf, conf_frame* frames_
 
 // frame creation and deletion
 conf_frame* create_conf_frame( struct ast_conf_member* member, conf_frame* next, const struct ast_frame* fr ) ;
+conf_frame* create_mix_frame( struct ast_conf_member* member, conf_frame* next, conf_frame** cf ) ;
 conf_frame* delete_conf_frame( conf_frame* cf ) ;
 
 #define copy_conf_frame(src) create_conf_frame( src->member, NULL, src->fr )
